fixing filter alignment problem

--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,6 @@ html {
   direction: rtl;
   display: inline-block;
 }
-.open-sans {
-  font-family: 'Open Sans';
-}
-body {
-  font-family: 'Roboto', Courier, monospace;
+.roboto {
+  font-family: 'Roboto';
 }
